--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "ajv": "^8.17.1",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
