--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "lucide-react": "^0.503.0",
+    "postcss-color-mix": "^1.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
