--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-    "homepage": "https://sawera123.github.io/portfoliowebsite",
+  "homepage": "https://sawera123.github.io/portfoliowebsite",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "ajv": "^8.17.1",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "cra-template": "1.3.0",
+    "gh-pages": "^6.3.0",
     "glightbox": "^3.3.1",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
